fix navbar not centered

--- a/css/style.css
+++ b/css/style.css
@@ -847,7 +847,6 @@ body {
   top: 50%;
   left: 90%;
   transform: translate(-50%, -50%);
-  left: 75%;
   list-style: none;
   text-align: center;
   width: 100%; }
