--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -69,7 +69,6 @@
         top: 50%;
         left: 90%;
         transform: translate(-50%, -50%);
-        left: 75%;
         list-style: none;
         text-align: center;
         width: 100%;
